k8s/sonarqube-postgres.deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube-postgres
spec:
  selector:
    matchLabels:
      app: sonarqube-postgres
  template:
    metadata:
      labels:
        app: sonarqube-postgres
    spec:
      containers:
      - name: database
        image: postgres:11
        resources: { }
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: database-volume
            mountPath: /mnt/do/postgresql
      volumes:
        - name: database-volume
          persistentVolumeClaim:
            claimName: sonarqube-postgres-pvc
