k8s/sonarqube.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
spec:
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:8.2-community
        imagePullPolicy: Always
        resources: { }
        ports:
        - containerPort: 9000
