k8s/sonarqube-postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-postgres
spec:
  selector:
    app: sonarqube-postgres
  ports:
  - port: 5432
    targetPort: 5432
