k8s/sonarqube.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
spec:
  selector:
    app: sonarqube
  ports:
  - port: 80
    targetPort: 9000
