k8s/sonarqube.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarqube
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - sonarqube.yourdomain.com
    secretName: sonarqube-tls
  rules:
    - host: sonarqube.yourdomain.com
      http:
        paths:
        - path: /
          backend:
            serviceName: sonarqube
            servicePort: 80
